--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,19 @@
+html { font-family: "Roboto Slab", serif; font-size: 16px; }
 
+body { padding: 3rem; }
+
+h1 { font-family: "Playfair Display", serif; font-size: 2rem; }
+
+h2 { font-family: "Playfair Display", serif; font-size: 1.2rem; }
+
+.div_left { width: 20%; }
+
+.navigation { margin-bottom: 2rem; }
+
+.left_subtitle { display: flex; justify-content: space-between; margin-bottom: 1rem; }
+
+.block_title { font-family: "Playfair Display", serif; font-size: 1rem; font-weight: bold; letter-spacing: 0.1rem; color: #888e90; }
+
+.input_form { border: 1.5px solid #888e906b; border-radius: 5px; padding: 0.5rem; }
 
 /*# sourceMappingURL=style.css.map */
