--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ h1 { font-family: "Playfair Display", serif; font-size: 2rem; }
 
 h2 { font-family: "Playfair Display", serif; font-size: 1.2rem; }
 
-.div_left { width: 20%; }
+.div_left { width: 20%; float: left; }
 
 .navigation { margin-bottom: 2rem; }
 
@@ -15,5 +15,15 @@ h2 { font-family: "Playfair Display", serif; font-size: 1.2rem; }
 .block_title { font-family: "Playfair Display", serif; font-size: 1rem; font-weight: bold; letter-spacing: 0.1rem; color: #888e90; }
 
 .input_form { border: 1.5px solid #888e906b; border-radius: 5px; padding: 0.5rem; }
+
+.div_right { width: 60%; float: right; }
+
+.process { width: 100%; float: right; }
+
+.process_bar { width: 100%; display: flex; justify-content: flex-start; background-color: #f5f6f6; font-size: 0.9rem; font-weight: 300; }
+
+.process .navigation { float: left; margin-left: 30rem; }
+
+img { width: 80%; height: auto; }
 
 /*# sourceMappingURL=style.css.map */
